--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -31,6 +31,8 @@ html
                 li.nav-item
                     a.nav-link(href='#')
                         span= 'Cart (' + total + ')'
+                li.nav-item
+                    a.nav-link(href='/transfer/create') Transfer
                         
                     
         if user 
